# DFDS-H3-Rust

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  openapi_final.json  pgadmin.md  schema.sql
migrations/: 001_create_users_table.sql  002_add_location_fields.sql  003_create_ports_table.sql  004_create_ports_table.sql
src/: config.rs  database.rs  h3_utils.rs  handlers.rs  main.rs  models.rs  routes.rs  setup.rs
static/: h3-heatmap.html  heatmap.html  hexagon-heatmap.html  kepler-heatmap.html
